@@ -1,5 +1,8 @@
 #
 # $Log: configure.ac,v $
+# Revision 1.29  2022-03-29 21:03:16+05:30  Cprogrammer
+# added arc4random() function for linux
+#
 # Revision 1.28  2021-08-24 11:21:12+05:30  Cprogrammer
 # added check for regex.h
 #
@@ -85,7 +88,7 @@
 # Revision 1.1  2014-09-02 22:13:49+05:30  Cprogrammer
 # Initial revision
 #
-# $Id: configure.ac,v 1.28 2021-08-24 11:21:12+05:30 Cprogrammer Exp mbhangui $
+# $Id: configure.ac,v 1.29 2022-03-29 21:03:16+05:30 Cprogrammer Exp mbhangui $
 #
 AC_PREREQ([2.64])
 AC_INIT([libqmail],m4_normalize(m4_include([conf-version])),m4_normalize(m4_include([conf-email])),libqmail, [https://github.com/mbhangui/libqmail])
@@ -110,7 +113,7 @@ PKG_INSTALLDIR
 
 dnl Checks for header files.
 AC_CHECK_HEADERS(ctype.h errno.h stdarg.h time.h unistd.h limits.h pwd.h grp.h fcntl.h signal.h stdint.h stddef.h endian.h netdb.h)
-AC_CHECK_HEADERS(regex.h sys/types.h sys/wait.h sys/file.h sys/endian.h arpa/inet.h)
+AC_CHECK_HEADERS(regex.h sys/types.h sys/wait.h sys/file.h sys/time.h sys/endian.h arpa/inet.h)
 
 case "$host" in
 *-*-sunos4.1.1*)
@@ -138,10 +141,7 @@ case "$host" in
 	;;
 esac
 
-AC_CHECK_FUNC(flock)
-if test "$ac_cv_func_flock" = yes ; then
-	AC_DEFINE([HAVE_FLOCK], [1], [flock function])
-fi
+AC_CHECK_FUNCS(flock arc4random)
 
 AC_CHECK_LIB(ssl, SSL_CTX_new, [AC_SUBST([LIB_SSL], ["-lssl"]) AC_DEFINE([HAVE_SSL], [1],[OpenSSL Library])],,-lssl)
 AC_CHECK_LIB(crypto, CRYPTO_new_ex_data, [AC_SUBST([LIB_CRYPTO], ["-lcrypto"]) AC_DEFINE([HAVE_CRYPTO], [1],[Crypto Library])],,-lcrypto)
